@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 204
+#define RUBY_PATCHLEVEL 205
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2011
 #define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 12
-#define RUBY_RELEASE_DATE "2011-05-12"
+#define RUBY_RELEASE_DAY 28
+#define RUBY_RELEASE_DATE "2011-05-28"
 
 #include "ruby/version.h"
 
