@@ -1,3 +1,11 @@
+Sun Feb 20 16:26:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread.c (exec_recursive): prevent temporary objects from GC.
+
+	* prevent temporary objects from GC, and should not use
+	  RSTRING_PTR() for function calls since it evaluates the argument
+	  a couple of times.
+
 Sun Feb 20 02:14:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* signal.c (sig_trap): avoid pthread_sigmask(xx, &mask, &mask) usage
